# PythonMC

./: .gitignore  404.html  BLANK_README.md  CHANGELOG.md  README.md  build.gradle  gradle.properties  index.html  mkdocs.yml  objects.inv
pythonmclibrary/: README.md  mkdocs.yml  setup.cfg  setup.py
pythonmclibrary/docs/: documentation.md  examples.md  index.md
pythonmclibrary/src/pythonmc/: __init__.py  __init__.pyi
pythonmclibrary/src/pythonmc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pythonmclibrary/src/pythonmc/advancement/: __init__.py  advancement.py  advancement.pyi  advancement_display.py  advancement_display.pyi  advancement_frame.py  advancement_frame.pyi  advancement_rewards.py  advancement_rewards.pyi  operation.py  operation.pyi  selection.py  selection.pyi
pythonmclibrary/src/pythonmc/block/: __init__.py  block.py  block.pyi  block_pos.py  block_pos.pyi  block_state.py  block_state.pyi  blocks.py  blocks.pyi
pythonmclibrary/src/pythonmc/entity/: __init__.py  arm.py  arm.pyi  damage_sources.py  damage_sources.pyi  entities.py  entities.pyi  entity.py  entity.pyi  hand.py  hand.pyi  living_entity.py  living_entity.pyi  removal_reasons.py  removal_reasons.pyi
pythonmclibrary/src/pythonmc/item/: __init__.py  hide_flags.py  hide_flags.pyi  item.py  item.pyi  item_rarity.py  item_rarity.pyi  item_stack.py  item_stack.pyi  items.py  items.pyi
pythonmclibrary/src/pythonmc/other/: __init__.py  identifier.py  identifier.pyi
pythonmclibrary/src/pythonmc/player/: __init__.py  ender_chest_inventory.py  ender_chest_inventory.pyi  hunger_manager.py  (+7 more)
(+224 files in other folders)
