[metadata]
name = pythonmc
version = 1.0.2
author = RevolvingMadness
author_email = revolvingmad@gmail.com
description = The python library for PythonMC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RevolvingMadness/PythonMC
project_urls =
    Bug Tracker = https://github.com/RevolvingMadness/PythonMC/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
